[tool.ruff]
target-version = "py310"
select = ["F", "E", "W"]
line-length = 88

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    { name = "VentoBianco", email = "scully1780@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
