[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [{ name = "VentoBianco", email = "scully1780@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
select = ["F", "E", "W"]
line-length = 88

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.uv]
package = false
