[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [{ name = "VentoBianco", email = "scully1780@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["pandas>=2.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.14.7", "pytest>=9.0.1"]
test = ["pytest>=9.0.1"]
